--- a/3 Maila/EHES/labos/1 praktika/main.tex
+++ b/3 Maila/EHES/labos/1 praktika/main.tex
@@ -273,7 +273,7 @@ chol & Numeric & 0 (0\%) & 152 & Kolesterol serikoa (mg/dl) \\ \hline
 \end{table}
       \item Histogramak: Barren gaineko zenbakiek adierazten dute zenbat instantzia (paziente) erortzen diren maila edo kategoria horretan.
       \item Numerikoak diren atributuentzat (\emph{age}, \emph{trestbps}, \emph{chol}, ...):
-    
+      
 \begin{table}[h!]
 \centering
 \begin{tabular}{|l|c|c|c|c|}
@@ -299,7 +299,9 @@ Intuitiboki, atributu bakoitzaren histogramak aztertuz, koloreak gehien desberdi
 Hau da, atributu konkretu batek barra bat baldin badu, zeinetan ia guztia urdina den, eta beste bat zeinetan ia guztia gorria den, honek informazio asko ematen du, izan ere, atributu honek hartzen duen balioak
 azken sailkapenean eragin handia duela adierazten du.
 Ordea, atributu baten barra guztiak nahiko orekatuak baldin badaude (koloreari dagokionez), honek informazio gutxi ematen duela ondoriozta dezakegu, izan ere, atributu honen balioak aldatzeak ez du 
-azken sailkapenean eragin handirik izango. \\
+azken sailkapenean eragin handirik izango.\\
+
+Kurtsoan zehar, \textbf{errelebante} hitza erabiliko dugu klasearekiko korrelazioa duten atributuak deskribatzeko. Bestalde, \textbf{erredundante} hitza erabiliko da klasearekiko korrelaziorik ez duten atributuentzat. \\
 
     \item \textbf{Badago korrelazioa aurkezten duten atributu-bikoteak? Korrelazionatutako atributuak erabiltzea erabilgarria izango da?}
 
