--- a/3 Maila/EHES/labos/1 praktika/main.tex
+++ b/3 Maila/EHES/labos/1 praktika/main.tex
@@ -123,8 +123,7 @@
   \textbf{\zuzendariaktestua}\\
   \irakaslea\\[2cm]
   
-  \data
-  }
+  \data}
   
 \end{center}
 \newpage
@@ -171,14 +170,14 @@ Praktika hau egiten hasi aurretik honako lanal eskatzen dira:
 \begin{enumerate}
   \item Gai hauei buruzko informazioa irakurri
   \begin{itemize}
-    \item Machine learning: datuetatik ezaguerara . Ikasketa automatikoaren funtsa, datuetatik
+    \item Machine learning: datuetatik ezaguerara. Ikasketa automatikoaren funtsa, datuetatik
           erabiliz ezaguera edo informazioa erauztea da. Datuek, lortu nahi den ezagueraren
           adierazgarri izan behar dute. Lagin-espazioko adibide esanguratsuak.
-          Irakurri: \cite[Chap. 1]{Witten2011}
+          Irakurri:\cite[Chap. 1]{Witten2011}
     \item Weka-ko datuen formatua: ARFF. Atributuak erabiltzen dira datuen deskribapen
           operatiboa emateko. Izan ere, atributuen bitartez deskribatutako datuei buruketako
           instantzia (edo adibide) deritze. Alegia, instantziak karakterizatzeko atributuak erabiltzen dira.
-          Irakurri: \cite[Chap. 2]{Witten2011}
+          Irakurri:\cite[Chap. 2]{Witten2011}
   \end{itemize}
   \item Weka deskargatu eta instalatu: \url{http://www.cs.waikato.ac.nz/ml/weka/}
 \end{enumerate}
