--- a/3 Maila/PK/1 mugarria/main.tex
+++ b/3 Maila/PK/1 mugarria/main.tex
@@ -190,7 +190,7 @@ Atal honetan, planifikatutako jarduerak eta ibilbide akademikoa kontuan hartuta,
 \end{table}
 
 \subsection{Arrisku-adierazle nagusiak eta konponbide-adierazleak}
-
+    qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq2waw 2ww2wqq
 \begin{table}[ht]
   \centering
   \renewcommand{\arraystretch}{1.3}
