--- a/plantilla/main.tex
+++ b/plantilla/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
-
+% chktex-file 44
+% chktex-file 24
 %%\chapterstyle{veelo}
 %% KAPITULU FORMATU BATZUK ARAZOAK EMATEN DITUZTE DOKUMENTUA 
 %% MOZTERAKOAN (croppedsize AUKERAREKIN, BEHEAN AGERTZEN DENA). 
@@ -109,11 +110,11 @@
   \vspace{2cm}
   
   
-  \HRule \\[0.5cm]
+  \HRule\\[0.5cm]
   {\LARGE 
     \textbf{\izenburua}
   }
-  \HRule \\[0.5cm]
+  \HRule\\[0.5cm]
 
   {\Large \textsl{\egilea}
   
@@ -123,8 +124,7 @@
   \textbf{\zuzendariaktestua}\\
   \irakaslea\\[2cm]
   
-  \data
-  }
+  \data}
   
 \end{center}
 \newpage
@@ -174,11 +174,11 @@
 \]
 
 \newpage
-\bibliographystyle{alpha}
-\bibliography{sample}
-\begin{itemize}
-    \item \emph{https://www.lystloc.com/blog/what-is-a-travelling-salesman-problem-tsp/}
-    \item \emph{SYMPLEX: SIMPLEX SOLVER}
-\end{itemize}
+%\bibliographystyle{alpha}
+%\bibliography{sample}
+%\begin{itemize}
+%   \item \emph{https://www.lystloc.com/blog/what-is-a-travelling-salesman-problem-tsp/}
+%   \item \emph{SYMPLEX: SIMPLEX SOLVER}
+%\end{itemize}
 
 \end{document}
